# sir-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: creds.rs  main.rs  openai_client.rs
