[package]
name = "CrabGPT-cordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
reqwest = "0.11.16"
serde_json = "1.0.95"
serenity = "0.11.5"
tokio = { version = "1.27.0", features = ["full"] }
