[package]
name = "crab_gpt_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = "1.1.1"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
serenity = "0.11.5"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
